{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 30,
  "lineage": "8d850003-8c67-3569-b794-235f48864005",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2023-01-25T08:47:28.925-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/keen-vial-375314/global/firewalls/egress-allow-all",
            "name": "egress-allow-all",
            "network": "https://www.googleapis.com/compute/v1/projects/keen-vial-375314/global/networks/terraform-network",
            "priority": 1000,
            "project": "keen-vial-375314",
            "self_link": "https://www.googleapis.com/compute/v1/projects/keen-vial-375314/global/firewalls/egress-allow-all",
            "source_ranges": [],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2023-01-25T08:47:28.813-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/keen-vial-375314/global/firewalls/ingress-allow-all",
            "name": "ingress-allow-all",
            "network": "https://www.googleapis.com/compute/v1/projects/keen-vial-375314/global/networks/terraform-network",
            "priority": 1000,
            "project": "keen-vial-375314",
            "self_link": "https://www.googleapis.com/compute/v1/projects/keen-vial-375314/global/firewalls/ingress-allow-all",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-7-v20221206",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/keen-vial-375314/zones/us-central1-c/disks/php-provision"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/keen-vial-375314/zones/us-central1-c/instances/php-provision",
            "instance_id": "884537861976417230",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "david@DESKTOP-PV0N8VQ:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDoprEIP4QOtluMzZS+wFG+89GXI8qgDhK0y0bKEJndjtlLNpXrDXmvZv9+2B05ZjnVn8atgHF8uF7cjyyDt4R0jbKIpA7ndUMfo99Nxc2C9D5ReKXAFVKjsnwBxowQ3lG8sRlKRxhev/3OyrEMaCrvDB6Qk7ghKC8gttrMAyc+qfMKSL0TXnAQd+lsKlHsEParZH2tj2EMcEuYge5hlVnvTSL9wb11g98ojxkEETrd2ZtsP5mN63Yc8VFs1FQcBkgMtYO6FHzWI8dyG6/a2VqTH9d80cHlWf16DaHlt1NJeEOYr/WQ0PKVo5ZI4nCPYGHYXFfuwPBLdT4A/75t/nlhFPkx7lIliRrsFzsVICssrf35Bp9yhBFaAQe+v8jTpplq8/sPr/DLKQ1+IHYzjWnIspOLt3D [...]
            },
            "metadata_fingerprint": "XmiPScpDfjw=",
            "metadata_startup_script": "#!/bin/bash\r\nsudo yum update -y\r\nsudo yum -y remove httpd\r\nsudo yum -y remove httpd-tools\r\nsudo yum install -y httpd24 php72 mysql57-server php72-mysqlnd\r\nservice httpd start\r\nchkconfig httpd on\r\n\r\nusermod -a -G apache ec2-user\r\nchown -R ec2-user:apache /var/www\r\nchmod 2775 /var/www\r\nfind /var/www -type d -exec chmod 2775 {} \\;\r\nfind /var/www -type f -exec chmod 0664 {} \\;\r\ncd /var/www/html\r\ncurl http://169.254.169.254/latest/ [...]
            "name": "php-provision",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.123.209.19",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/keen-vial-375314/global/networks/terraform-network",
                "network_ip": "10.128.0.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/keen-vial-375314/regions/us-central1/subnetworks/terraform-network",
                "subnetwork_project": "keen-vial-375314"
              }
            ],
            "project": "keen-vial-375314",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/keen-vial-375314/zones/us-central1-c/instances/php-provision",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "stirring-louse"
            ],
            "tags_fingerprint": "g9Dcf3JS5m8=",
            "zone": "us-central1-c"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "random_pet.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "id": "projects/keen-vial-375314/global/networks/terraform-network",
            "name": "terraform-network",
            "project": "keen-vial-375314",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/keen-vial-375314/global/networks/terraform-network"
          }
        }
      ]
    }
  ]
}